# pdf-rag-service

./: .gitignore  Dockerfile  README.md  app.py  ingest.py  pyproject.toml
.github/workflows/: ci.yml
rag/: pipeline.py
tests/: test_api.py
